Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11366

ArmHF SIGBUS errors in Connect Storage Engine

    XMLWordPrintable

Details

    Description

      While building and testing on Launchpad, MariaDB crashes with SIGBUS in the connect storage engine when working with doubles as data, in a TABLE_FORMAT=BIN table.
      The test that fails is connect.upd.

      Sadly, no stack trace is available, however the common error message is:

      161113  0:19:49 [ERROR] mysqld got signal 7 ;
      

      NOTE: ArmHF requires memory alignment of 8 for 64 bit double values.

      The problem is fixed on Launchpad via this patch:
      https://github.com/cvicentiu/mariadb-10.0/commit/9e44ef13086672f2e852cd2ad6ae3ed658f999dd

      Attachments

        Issue Links

          Activity

            People

              bertrandop Olivier Bertrand
              cvicentiu Vicențiu Ciorbaru
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.